--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: font-family: 'Courier New', Courier, monospace;
     color: purple;
     
     
@@ -11,12 +11,12 @@ h1 {
        align-items: center;
       flex-direction: column;
       color: yellow;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-family: font-family: 'Courier New', Courier, monospace;
     } 
 
 .textinput {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: font-family: 'Courier New', Courier, monospace;
 }
