--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ h1 {
     align-items: center;
     font-family: font-family: 'Courier New', Courier, monospace;
 }
+
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
