--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    font-family: font-family: 'Courier New', Courier, monospace;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: purple;
     
     
@@ -11,19 +11,17 @@ h1 {
        align-items: center;
       flex-direction: column;
       color: yellow;
-      font-family: font-family: 'Courier New', Courier, monospace;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     } 
 
 .textinput {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: font-family: 'Courier New', Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 150px;
-}
+    width: 400px;
+    height: 400px;
+  }
