--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+#button {
+    width: 8%;
+    height: 45px;
+    border: 3px solid lightgreen;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+}
+
 img {
     width: 400px;
     height: 400px;
