--- a/style.css
+++ b/style.css
@@ -1,33 +1,26 @@
-h1 {
+ h1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: purple;
     
     
-}
-    body {
+} 
+body {
       display: flex above everything;
       background-color: rgb(10,4,5);
        justify-content: center;
        align-items: center;
       flex-direction: column;
       color: yellow;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
     } 
 
 .textinput {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
-#button {
-    width: 8%;
-    height: 45px;
-    border: 3px solid lightgreen;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: large;
-}
 
 img {
     width: 400px;
