--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
+#button {
+    width: 8%;
+    height: 50px;
+    border: 3px solid lightpink;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+}
+
 
 img {
     width: 400px;
